--- a/Clinic/Clinic.csproj
+++ b/Clinic/Clinic.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="Enums\CountryCode.cs" />
     <Compile Include="Enums\SpecjalizationEnum.cs" />
+    <Compile Include="Enums\WeekEnum.cs" />
     <Compile Include="Models\Adress.cs" />
+    <Compile Include="Models\Clinic.cs" />
     <Compile Include="Models\Doctor.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Person.cs" />
@@ -53,6 +55,7 @@
     <Compile Include="Models\WorkDay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DoctorsService.cs" />
     <Compile Include="Validates\AdressValidate.cs" />
   </ItemGroup>
   <ItemGroup>
